--- a/SemEval2020_Task5_Subtask_1.ipynb
+++ b/SemEval2020_Task5_Subtask_1.ipynb
@@ -3,10 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "SemEval2020-Task5-Subtask-1.ipynb",
+      "name": "SemEval2020_Task5_Subtask_1.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -36,17 +35,15 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')\n",
         "\n",
-        "#!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/train.csv /content\n",
-        "#!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/test.csv /content\n",
+        "!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-1/train.csv /content\n",
+        "!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-1/test.csv /content\n",
         "\n",
-        "!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/antecedents.tsv /content\n",
-        "!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/consequents.tsv /content\n",
-        "!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/simplified.tsv /content\n",
+        "#!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/antecedents.tsv /content\n",
+        "#!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/consequents.tsv /content\n",
         "\n",
-        "!cp -r /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-1/xlm-clm-ende-1024_batch32_epoch4.test /content/outputs\n",
-        "#!cp -r /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-1/roberta_batch32_epoch4.test /content/outputs\n",
-        "\n",
-        "#!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-1/test.tsv /content"
+        "#!cp -r /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-1/xlm-clm-ende-1024_batch32_epoch4.test /content/outputs\n",
+        "#!cp -r /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/xlm-clm-ende-1024_batch32_epoch4.consequents.train /content/outputs\n",
+        "#!cp -r /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-1/roberta_batch32_epoch4.test /content/outputs"
       ],
       "execution_count": 0,
       "outputs": []
@@ -77,16 +74,16 @@
         "\n",
         "dev_df = pd.DataFrame({\n",
         "    'id':train_df[0],\n",
-        "    'labels':[1]*train_df.shape[0],\n",
+        "    'labels':train_df[1],\n",
         "    'alpha':['a']*train_df.shape[0],\n",
-        "    'text': train_df[3]  # 1-sentence, 2-antecedent, 3-consequent\n",
+        "    'text': train_df[2]\n",
         "})\n",
         "\n",
         "train_df = pd.DataFrame({\n",
         "    'id':train_df[0],\n",
-        "    'labels':[1]*train_df.shape[0],\n",
+        "    'labels':train_df[1],\n",
         "    'alpha':['a']*train_df.shape[0],\n",
-        "    'text': train_df[3]\n",
+        "    'text': train_df[2]\n",
         "})\n",
         "train_df.head()"
       ],
@@ -121,76 +118,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "A25sSGU2lG0M",
-        "colab_type": "text"
-      },
-      "source": [
-        "PRE-ANALYZED TRAIN/TEST DATA - Skip this step in train mode"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "pcCOsgyHbnrP",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "import pandas as pd\n",
-        "prefix = '/content/'\n",
-        "df = pd.read_csv(prefix + 'consequents.tsv', sep='\\t', delimiter=None, header=None)\n",
-        "\n",
-        "test_df = pd.DataFrame({\n",
-        "    'id': df[0],\n",
-        "    'labels':['0']*df.shape[0],\n",
-        "    'alpha':['a']*df.shape[0],\n",
-        "    'text': df[2],\n",
-        "    'start':df[3],\n",
-        "    'end': df[4]\n",
-        "})\n",
-        "\n",
-        "test_df.head(10)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "vXxXxi_i0rlZ",
-        "colab_type": "text"
-      },
-      "source": [
-        "SIMPLIFIED DATA"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "WtHWykppzo-8",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "import pandas as pd\n",
-        "prefix = '/content/'\n",
-        "df = pd.read_csv(prefix + 'simplified.tsv', sep='\\t', delimiter=None, header=None)\n",
-        "\n",
-        "test_df = pd.DataFrame({\n",
-        "    'id': df[0],\n",
-        "    'labels':['0']*df.shape[0],\n",
-        "    'alpha':['a']*df.shape[0],\n",
-        "    'text': df[2]\n",
-        "})\n",
-        "\n",
-        "test_df.head()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "IZPKKQVHpvfj",
         "colab_type": "text"
       },
@@ -210,8 +137,8 @@
         "#print(dev_df.count())\n",
         "print(test_df.count())\n",
         "\n",
-        "#train_df.to_csv(prefix+'train.tsv', sep='\\t', index=False, header=False)\n",
-        "#dev_df.to_csv(prefix + 'dev.tsv', sep='\\t', index=False, header=False)\n",
+        "train_df.to_csv(prefix+'train.tsv', sep='\\t', index=False, header=False)\n",
+        "dev_df.to_csv(prefix + 'dev.tsv', sep='\\t', index=False, header=False)\n",
         "test_df.to_csv(prefix+'test.tsv', sep='\\t', index=False, header=False)"
       ],
       "execution_count": 0,
@@ -577,12 +504,13 @@
         "from torch.utils.data import (DataLoader, RandomSampler, SequentialSampler, TensorDataset)\n",
         "import random\n",
         "from torch.utils.data.distributed import DistributedSampler\n",
-        "from tqdm import tqdm_notebook, trange\n",
+        "from tqdm import trange\n",
+        "from tqdm.notebook import tqdm\n",
         "\n",
-        "from pytorch_transformers import (WEIGHTS_NAME, BertConfig, BertForSequenceClassification, BertTokenizer,\n",
-        "                                  XLMConfig, XLMForSequenceClassification, XLMTokenizer, \n",
-        "                                  XLNetConfig, XLNetForSequenceClassification, XLNetTokenizer,\n",
-        "                                  RobertaConfig, RobertaForSequenceClassification, RobertaTokenizer)\n",
+        "from transformers import (WEIGHTS_NAME, BertConfig, BertForSequenceClassification, BertTokenizer,\n",
+        "                          XLMConfig, XLMForSequenceClassification, XLMTokenizer, \n",
+        "                          XLNetConfig, XLNetForSequenceClassification, XLNetTokenizer,\n",
+        "                          RobertaConfig, RobertaForSequenceClassification, RobertaTokenizer)\n",
         "\n",
         "from pytorch_transformers import AdamW, WarmupLinearSchedule\n",
         "\n",
@@ -687,7 +615,7 @@
         "    train_iterator = trange(int(args['num_train_epochs']), desc=\"Epoch\")\n",
         "    \n",
         "    for _ in train_iterator:\n",
-        "        epoch_iterator = tqdm_notebook(train_dataloader, desc=\"Iteration\")\n",
+        "        epoch_iterator = tqdm(train_dataloader, desc=\"Iteration\")\n",
         "        for step, batch in enumerate(epoch_iterator):\n",
         "            model.train()\n",
         "            batch = tuple(t.to(device) for t in batch)\n",
@@ -713,8 +641,10 @@
         "\n",
         "            tr_loss += loss.item()\n",
         "            if (step + 1) % args['gradient_accumulation_steps'] == 0:\n",
-        "                scheduler.step()  # Update learning rate schedule\n",
         "                optimizer.step()\n",
+        "#In PyTorch 1.1.0 and later, you should call them in the opposite order: `optimizer.step()` before `lr_scheduler.step()`.  \n",
+        "#Failure to do this will result in PyTorch skipping the first value of the learning rate schedule\n",
+        "                scheduler.step()  # Update learning rate schedule\n",
         "                model.zero_grad()\n",
         "                global_step += 1\n",
         "\n",
@@ -822,7 +752,7 @@
         "    preds = None\n",
         "    out_label_ids = None\n",
         "\n",
-        "    for batch in tqdm_notebook(eval_dataloader, desc=\"Evaluating\"):\n",
+        "    for batch in tqdm(eval_dataloader, desc=\"Evaluating\"):\n",
         "        model.eval() # set model in evaluation mode\n",
         "        batch = tuple(t.to(device) for t in batch)\n",
         "\n",
@@ -894,7 +824,7 @@
         "    'eval_batch_size': 32,\n",
         "\n",
         "    'gradient_accumulation_steps': 1,\n",
-        "    'num_train_epochs': 3,\n",
+        "    'num_train_epochs': 4,\n",
         "    'weight_decay': 0,\n",
         "    'learning_rate': 4e-5,\n",
         "    'adam_epsilon': 1e-8,\n",
@@ -1008,6 +938,42 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "A25sSGU2lG0M",
+        "colab_type": "text"
+      },
+      "source": [
+        "PRE-ANALYZED TRAIN/TEST DATA - Skip this step in train mode"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pcCOsgyHbnrP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import pandas as pd\n",
+        "prefix = '/content/'\n",
+        "df = pd.read_csv(prefix + 'consequents.tsv', sep='\\t', delimiter=None, header=None)\n",
+        "\n",
+        "test_df = pd.DataFrame({\n",
+        "    'id': df[0],\n",
+        "    'labels':['0']*df.shape[0],\n",
+        "    'alpha':['a']*df.shape[0],\n",
+        "    'text': df[2],\n",
+        "    'start':df[3],\n",
+        "    'end': df[4]\n",
+        "})\n",
+        "test_df.to_csv(prefix+'test.tsv', sep='\\t', index=False, header=False)\n",
+        "test_df.head(10)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "uFY_yUjEMz2c",
         "colab_type": "text"
       },
@@ -1035,7 +1001,7 @@
         "\n",
         "            model = model_class.from_pretrained(checkpoint)\n",
         "            model.to(device) # reload model from checkpoint\n",
-        "            result, wrong = evaluate(model, tokenizer, prefix=directory, dataset=False) # change to False for test\n",
+        "            result, wrong = evaluate(model, tokenizer, prefix=directory, dataset=True) # change to False for test\n",
         "\n",
         "            result = dict((k + '_{}'.format(checkpoint), v) for k, v in result.items())\n",
         "            results.update(result)"
@@ -1055,7 +1021,7 @@
         "import os\n",
         "os.chdir('/content/outputs/')\n",
         "!ls\n",
-        "#!zip submission_task1.zip subtask1.csv   "
+        "!zip submission_task1.zip subtask1.csv   "
       ],
       "execution_count": 0,
       "outputs": []
@@ -1068,7 +1034,7 @@
         "colab": {}
       },
       "source": [
-        "!mv /content/outputs /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/"
+        "!mv /content/outputs /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-1/ # change to Subtask-2"
       ],
       "execution_count": 0,
       "outputs": []
