Setup task 1 on separate environment
Re-created subtask 1 on separate test account

--- a/SemEval2020_Task5_Data.ipynb
+++ b/SemEval2020_Task5_Data.ipynb
@@ -49,14 +49,12 @@
         "\n",
         "prefix = '/content/'\n",
         "\n",
-        "test_df = pd.read_csv(prefix + 'train.csv', header=None)\n",
+        "test_df = pd.read_csv(prefix + 'test.csv', header=None)\n",
         "test_df=test_df.drop(index=0)\n",
         "\n",
         "test_df = pd.DataFrame({\n",
         "    'id':test_df[0],\n",
-        "    'text': test_df[1], # comment out following for test.csv\n",
-        "    'antecedent': test_df[2],\n",
-        "    'consequent': test_df[3]\n",
+        "    'text': test_df[1]\n",
         "})\n",
         "\n",
         "# display \n",
@@ -134,9 +132,148 @@
         "from allennlp.predictors.predictor import Predictor\n",
         "import allennlp_models.syntax.biaffine_dependency_parser\n",
         "predictor = Predictor.from_path(\"https://storage.googleapis.com/allennlp-public-models/biaffine-dependency-parser-ptb-2020.04.06.tar.gz\")\n",
-        "predictor.predict(\n",
-        "  sentence=\"If you had started earlier, investing just $2,000 per year, you'd have accumulated almost $100,000 if it grew at 8% per year, on average, and more than $125,000 if it had grown at 10%.\"\n",
-        ")"
+        "\n",
+        "prediction = predictor.predict(\n",
+        "  sentence=\"When I ask Robertson if any of the tests offered by Theranos could have saved Holmes's uncle, he takes a long pause.\"\n",
+        ")\n",
+        "prediction"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ze1FUy-yukEa",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def extract_dependents(prediction):\n",
+        " for k, v in prediction.items():\n",
+        "  if (k=='hierplane_tree'):\n",
+        "    for ke, val in v.items():\n",
+        "      if (ke=='root'):\n",
+        "        for key, value in val.items():\n",
+        "          if (key == 'children'):\n",
+        "            return extract_children(value) "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3Rrhac-EvZsE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def extract_children(obj):\n",
+        "  arr = list()\n",
+        "  deps = list()\n",
+        "  spans = list()\n",
+        "\n",
+        "  def extract(obj, arr): \n",
+        "    if isinstance(obj, dict):\n",
+        "      for k, v in obj.items():\n",
+        "        if isinstance(v, (dict, list)):\n",
+        "          extract(v, arr)     \n",
+        "        if k=='word':\n",
+        "          arr.append(v)\n",
+        "\n",
+        "    elif isinstance(obj, list):\n",
+        "      for item in obj:\n",
+        "        if isinstance(item, dict):\n",
+        "    \n",
+        "          for key, value in item.items():\n",
+        "            if key =='spans' and len(value) > 0:\n",
+        "              spans.append(value)\n",
+        "            if key =='children':\n",
+        "              deps.append(value)  \n",
+        "            #if key =='attributes' and 'VERB' in value:\n",
+        "            #  deps.append(item)\n",
+        "        \n",
+        "        extract(item, arr)\n",
+        "      \n",
+        "    return arr\n",
+        "\n",
+        "  words = extract(obj, arr)\n",
+        "  return words, spans, deps"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2rZCHjnohcfR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def stringnify(dependent):\n",
+        "  clauses = list()\n",
+        " \n",
+        "  for d in dependent:\n",
+        "    c = separate_children(d) # list of d['word']s\n",
+        "    print(c)\n",
+        "    clauses.append(c)\n",
+        "\n",
+        "  return clauses"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ep8OBDtqgyE4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def separate_children(obj):\n",
+        "  arr = list()\n",
+        "\n",
+        "  def separate(obj, arr): \n",
+        "    if isinstance(obj, dict):\n",
+        "\n",
+        "      for k, v in obj.items():\n",
+        "        if k != 'children':\n",
+        "          if isinstance(v, (dict, list)):\n",
+        "              separate(v, arr)\n",
+        "          elif k == 'word':      \n",
+        "              arr.append(v)\n",
+        "\n",
+        "    elif isinstance(obj, list):\n",
+        "        for item in obj:\n",
+        "            separate(item, arr)\n",
+        "      \n",
+        "    return arr\n",
+        "\n",
+        "  results = separate(obj, arr)\n",
+        "  return results"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rJQJNkGXQp-Z",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "words, spans, deps = extract_dependents(prediction)\n",
+        "print(words)\n",
+        "print(spans)\n",
+        "print(deps)\n",
+        "\n",
+        "for dep in deps:\n",
+        "  clauses = stringnify(dep)\n",
+        "  print(clauses)\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -217,7 +354,7 @@
         "from time import sleep\n",
         "\n",
         "submit_df = pd.DataFrame(columns=['sentenceID','antecedent_startid','antecedent_endid','consequent_startid','consequent_endid'])\n",
-        "report_df = pd.DataFrame(columns=['sentenceID','clabel','cprob','consequent','gold_consequent','alabel','aprob','antecedent','gold_antecedent'])\n",
+        "report_df = pd.DataFrame(columns=['sentenceID','clabel','cprob','consequent','cstart','cend','gold_consequent','alabel','aprob','antecedent','astart','aend','gold_antecedent'])\n",
         "\n",
         "for ind in tqdm(test_df.index): \n",
         "  original = test_df['text'][ind]\n",
@@ -235,14 +372,15 @@
         "\n",
         "  if len(antecedent) > 0:\n",
         "    text = antecedent      \n",
-        "  if len(consequent) > 0:\n",
+        "  if len(consequent) > 0 and not (consequent in text):\n",
         "    text = text + ' | ' + consequent\n",
-        "  #else: # go back to try replacement\n",
-        "  #  text = text + ' | ' + antecedent \n",
-        "  #  cstart = astart\n",
-        "  #  cend = aend \n",
-        "    \n",
-        "  if len(text) == 0:\n",
+        "  elif len(text) > 0:\n",
+        "    astart= cstart\n",
+        "    aend = cend \n",
+        "    consequent = '{}'\n",
+        "    cstart=-1\n",
+        "    cend = -1 \n",
+        "  else:\n",
         "    print(id,'no result')\n",
         "    continue\n",
         "\n",
@@ -250,12 +388,16 @@
         "    'sentenceID': id,\n",
         "    'clabel': clab,\n",
         "    'cprob': cprob,\n",
-        "    'consequent': consequent, # comment out gold_\n",
-        "    'gold_consequent': test_df['consequent'][ind],\n",
+        "    'consequent': consequent, # comment out gold_,\n",
+        "    'cstart': cstart,\n",
+        "    'cend': cend,\n",
+        "    #'gold_consequent': test_df['consequent'][ind],\n",
         "    'alabel': alab,\n",
         "    'aprob': aprob,\n",
         "    'antecedent': antecedent, \n",
-        "    'gold_antecedent': test_df['antecedent'][ind]\n",
+        "    'astart': astart,\n",
+        "    'aend': aend,\n",
+        "    #'gold_antecedent': test_df['antecedent'][ind]\n",
         "  }, name = str(id) )\n",
         "\n",
         "  result_row = pd.Series( data={\n",
@@ -273,7 +415,7 @@
         "  sleep(1)\n",
         "\n",
         "submit_df.to_csv(prefix+'subtask2.csv',index=False, header=['sentenceID','antecedent_startid','antecedent_endid','consequent_startid','consequent_endid']) \n",
-        "report_df.to_csv(prefix+'report.csv',index=False, header=['sentenceID','clabel','cprob','consequent','gold_consequent','alabel','aprob','antecedent','gold_antecedent'])\n",
+        "report_df.to_csv(prefix+'report.csv',index=False, header=['sentenceID','clabel','cprob','consequent','cstart','cend','gold_consequent','alabel','aprob','antecedent','astart','aend','gold_antecedent'])\n",
         "report_df.head(100) "
       ],
       "execution_count": 0,
