--- a/SemEval2020_Task5_Subtask_1.ipynb
+++ b/SemEval2020_Task5_Subtask_1.ipynb
@@ -38,10 +38,10 @@
         "!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-1/train.csv /content\n",
         "!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-1/test.csv /content\n",
         "\n",
-        "#!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/antecedents.tsv /content\n",
-        "#!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/consequents.tsv /content\n",
+        "!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/antecedents.tsv /content\n",
+        "!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/consequents.tsv /content\n",
         "\n",
-        "#!cp -r /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-1/xlm-clm-ende-1024_batch32_epoch4.test /content/outputs\n",
+        "!cp -r /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-1/xlm-clm-ende-1024_batch32_epoch4 /content/outputs\n",
         "#!cp -r /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/xlm-clm-ende-1024_batch32_epoch4.consequents.train /content/outputs\n",
         "#!cp -r /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-1/roberta_batch32_epoch4.test /content/outputs"
       ],
@@ -814,7 +814,7 @@
         "    'task_name': 'binary',\n",
         "    'output_dir': 'outputs/',\n",
         "    'cache_dir': 'cache/',\n",
-        "    'do_train': True,\n",
+        "    'do_train': False,\n",
         "    'do_eval': True,\n",
         "    'fp16': False,\n",
         "    'fp16_opt_level': 'O1',\n",
@@ -955,7 +955,7 @@
       "source": [
         "import pandas as pd\n",
         "prefix = '/content/'\n",
-        "df = pd.read_csv(prefix + 'consequents.tsv', sep='\\t', delimiter=None, header=None)\n",
+        "df = pd.read_csv(prefix + 'antecedents.tsv', sep='\\t', delimiter=None, header=None)\n",
         "\n",
         "test_df = pd.DataFrame({\n",
         "    'id': df[0],\n",
@@ -1001,7 +1001,7 @@
         "\n",
         "            model = model_class.from_pretrained(checkpoint)\n",
         "            model.to(device) # reload model from checkpoint\n",
-        "            result, wrong = evaluate(model, tokenizer, prefix=directory, dataset=True) # change to False for test\n",
+        "            result, wrong = evaluate(model, tokenizer, prefix=directory, dataset=False) # change to False for test\n",
         "\n",
         "            result = dict((k + '_{}'.format(checkpoint), v) for k, v in result.items())\n",
         "            results.update(result)"
